--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,9 +136,9 @@
           <%= image_tag item.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
+         <%# <div class='sold-out'>%>
+          <%#  <span>Sold Out!!</span>%>
+          <%#</div>%>
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
@@ -147,7 +147,7 @@
             <%= item.name %>
           </h3>
           <div class='item-price'>
-            <span><%= item.price %>円<br><%= item.shipping_fee_status.name %></span>
+            <span><%= item.price %>円<br><%= item.shipping_fee.name %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
