--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,7 +30,7 @@
       <%# ログインしている場合 %>
       <% if current_user.id == @item.user_id %>
         <%# ログインユーザーが出品者の場合、編集・削除ボタンを表示する %>
-      <%= link_to "商品の編集", "#", class: "item-red-btn" %>
+      <%= link_to "商品の編集", edit_item_path(@item.id), class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除", "#", class:"item-destroy" %>
     <% else %>
