--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -32,7 +32,7 @@
         <%# ログインユーザーが出品者の場合、編集・削除ボタンを表示する %>
       <%= link_to "商品の編集", edit_item_path(@item), class: "item-red-btn" %>
       <p class="or-text">or</p>
-      <%= button_to "削除", item_path(@item), method: :delete, data: { turbo_confirm: '本当に削除しますか？' }, class: "item-destroy" %>
+      <%= button_to "削除", item_path(@item), method: :delete, class: "item-destroy" %>
     <% else %>
         <%# ログインユーザーが出品者でない場合、購入ボタンを表示する %>
         <%= link_to "購入画面に進む", "#", class: "item-red-btn" %>
