--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -35,7 +35,7 @@
       <%= button_to "削除", item_path(@item), method: :delete, class: "item-destroy" %>
     <% else %>
         <%# ログインユーザーが出品者でない場合、購入ボタンを表示する %>
-        <%= link_to "購入画面に進む", "#", class: "item-red-btn" %>
+        <%= link_to "購入画面に進む", "#", data: { turbo: false }, class:"item-red-btn"%>
       <% end %>
     <% end %>
 
