--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,22 +127,17 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
-
-      <% if @items.present? %>
+    <% if @items.exists? %>
         <% @items.each do |item| %>
       <li class='list'>
         <%= link_to item_path(item) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-
-                <%# 商品が売れていればsold outを表示しましょう %>
-                <!-- 購入機能実装後にここのコメントアウトを外してください
-
-                  <div class='sold-out'>
-                    <span>Sold Out!!</span>
-                  </div>
-
-                -->
+            <% if item.order.present? %>
+            <div class='sold-out'>
+              <span>Sold Out!!</span>
+            </div>
+          <% end %>
               </div>
               <div class='item-info'>
                 <h3 class='item-name'>
