--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,13 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-    <!-- 購入機能実装後にコメントアウトを外してください
+      <% if @item.order.present? %>
         <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-    -->
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -25,16 +23,15 @@
       </span>
     </div>
 
-    <%# ログイン状態によって、ボタン表示を切り替える %>
     <% if user_signed_in? %>
-      <%# ログインしている場合 %>
-      <% if current_user == @item.user %>
-        <%# ログインユーザーが出品者の場合、編集・削除ボタンを表示する %>
+  <%# ログインしている場合 %>
+  <% if current_user == @item.user && @item.order.nil? %>
+    <%# ログインユーザーが出品者であり、かつ未売却の場合に表示する %>
       <%= link_to "商品の編集", edit_item_path(@item), class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= button_to "削除", item_path(@item), method: :delete, class: "item-destroy" %>
-    <% else %>
-        <%# ログインユーザーが出品者でない場合、購入ボタンを表示する %>
+  <% elsif current_user != @item.user && @item.order.nil? %>
+    <%# ログインユーザーが出品者ではなく、かつ未売却の場合に表示する %>
         <%= link_to "購入画面に進む", item_orders_path(@item), data: { turbo: false }, class:"item-red-btn"%>
       <% end %>
     <% end %>
